kuber/2.3/mission2/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy
  namespace: mission2
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        volumeMounts:
        - name: index
          mountPath: /usr/share/nginx/html
      volumes:
      - name: index
        configMap:
          name: cm-nginx
