kuber/2.3/mission2/svc-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-nginx
  namespace: mission2
spec:
  selector:
    app: nginx
  ports:
    - name: mission2
      protocol: TCP
      port: 80
      targetPort: 80
