kuber/2.3/mission2/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: mission2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/canary: "true"  
    #nginx.ingress.kubernetes.io/canary-by-header: "X-Custom-Header" 
    #nginx.ingress.kubernetes.io/canary-by-header-value: "special-value"
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: aos-test.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-nginx
            port:
              number: 80
  tls:
    - hosts: 
      - aos-test.ru
      secretName: sec-nginx
